[WAL-5838] Fix popup overlapping issue

--- a/src/metronic/assets/sass/custom/_base.scss
+++ b/src/metronic/assets/sass/custom/_base.scss
@@ -189,3 +189,7 @@
     text-decoration: none;
   }
 }
+
+.z-index-100 {
+  z-index: 100;
+}
